--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "zod": "^3.22.4"
   }
 }
