Añadir comandos para instalar y ejecutar servicios en PHP y actualizar instrucciones en el archivo readme.md

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "db": "node src/db/exec.db.js",
+    "php:install": "cd php_services && composer install",
     "php:up": "cd php_services && php -S localhost:9000"
   },
   "keywords": [],
